--- a/src/pages/modalnoticias/modalnoticias.scss
+++ b/src/pages/modalnoticias/modalnoticias.scss
@@ -7,4 +7,14 @@ page-modalnoticias {
     ion-card-content{
       background-color: #eeeeee;
     }
+        
+    .float-ion-button{
+      float: left;
+  }
+
+  .fullWidth{
+      width: 100%;
+      text-align: center !important;
+      color: white;
+  }
 }
