Cadastro e visualização de cursos. Revisões em alguns detalhes das páginas de cadastro. Iniciando a pesquisa para redirecionar o usuário quando o usuário clicar na notícia para abrir o aplicativo

--- a/src/pages/modalnoticias/modalnoticias.scss
+++ b/src/pages/modalnoticias/modalnoticias.scss
@@ -17,4 +17,8 @@ page-modalnoticias {
       text-align: center !important;
       color: white;
   }
+
+  .toolbar-title-md {
+    padding: 5px;
+  }
 }
