--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,8 +7,8 @@
 
   <ion-content>
     <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
+      <button menuClose ion-item (click)="chamaAgendAcim(2)">
+        AgendAcim
       </button>
     </ion-list>
   </ion-content>
