--- a/src/pages/homeinformacim/homeinformacim.scss
+++ b/src/pages/homeinformacim/homeinformacim.scss
@@ -14,4 +14,9 @@ page-homeinformacim {
     text-overflow: ellipsis;
     border: 1px;
 }
+
+.toolbar-title {
+  text-overflow: unset;
+  white-space: unset;
+}
 }
