Modificações no header das noticias para o se ajustar ao tamanho do titulo. Correção da ordenação das notícias que nao estava funcionando como esperado

--- a/src/pages/modalnoticias/modalnoticias.scss
+++ b/src/pages/modalnoticias/modalnoticias.scss
@@ -10,6 +10,8 @@ page-modalnoticias {
         
     .float-ion-button{
       float: left;
+      position: absolute;
+      height: 94%;
   }
 
   .fullWidth{
@@ -21,4 +23,15 @@ page-modalnoticias {
   .toolbar-title-md {
     padding: 5px;
   }
+
+  .label-title {
+    text-overflow: inherit;
+    white-space: normal;
+    text-align: center !important;
+    color: white;
+    font-size: 1.6rem;
+    display: block;
+    margin-left: 8%;
+    width: 92%;
+ }
 }
