--- a/src/app/app.html
+++ b/src/app/app.html
@@ -10,7 +10,13 @@
       <button menuClose ion-item (click)="chamaAgendAcim(2)">
         AgendAcim
       </button>
+      <button menuClose ion-item (click)="chamaQuemSomos(3)">
+        Quem Somos
+      </button>
     </ion-list>
+    <button menuClose ion-item (click)="chamaEmpresas(4)">
+      Empresas Associadas
+    </button>
   </ion-content>
 
 </ion-menu>
