--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,16 +7,23 @@
 
   <ion-content>
     <ion-list>
+      <button menuClose ion-item (click)="chamaInformAcim(2)">
+        InformAcim
+      </button>
+      <button menuClose ion-item (click)="chamaCapacitAcim(2)">
+        CapacitAcim
+      </button>
       <button menuClose ion-item (click)="chamaAgendAcim(2)">
         AgendAcim
       </button>
       <button menuClose ion-item (click)="chamaQuemSomos(3)">
         Quem Somos
       </button>
-    </ion-list>
+
     <button menuClose ion-item (click)="chamaEmpresas(4)">
       Empresas Associadas
     </button>
+        </ion-list>
   </ion-content>
 
 </ion-menu>
