Versão 0.0.3 publicada na play store dia 15/02/2019

--- a/src/pages/capacitacim/capacitacim.scss
+++ b/src/pages/capacitacim/capacitacim.scss
@@ -1,3 +1,8 @@
 page-capacitacim {
-
+    .label-title {
+        text-overflow: inherit;
+        white-space: normal;
+        font-size: 1.6rem;
+        text-align: justify;
+     }
 }
