Versão 0.0.4 publicada na play store dia 16/02/2019

--- a/src/pages/modalagenda/modalagenda.scss
+++ b/src/pages/modalagenda/modalagenda.scss
@@ -1,6 +1,30 @@
 page-modalagenda {
-    .toolbar-title-md {
-        padding: 5px;
-      }
-      
+
+  p{
+    font-size: 1.6rem;
+    text-align: justify;
+  }
+  .float-ion-button{
+    float: left;
+}
+
+.fullWidth{
+    width: 100%;
+    text-align: center !important;
+    color: white;
+}
+.toolbar-title-md {
+  padding: 5px;
+}
+
+.label-title {
+  text-overflow: inherit;
+  white-space: normal;
+  text-align: center !important;
+  color: white;
+  font-size: 1.6rem;
+  display: block;
+  margin-left: 8%;
+  width: 92%;
+}
 }
