Versão 0.0.7 publicada na playstore em 17/03/2019

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -19,9 +19,11 @@
       <button menuClose ion-item (click)="chamaQuemSomos(3)">
         Quem Somos
       </button>
-
       <button menuClose ion-item (click)="chamaEmpresas(4)">
         Empresas Associadas
+      </button>
+      <button menuClose ion-item (click)="chamaPolitica()">
+        Política de Privacidade
       </button>
       
     </ion-list>
